--- a/src/main/java/view/DangNhapView.form
+++ b/src/main/java/view/DangNhapView.form
@@ -143,6 +143,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Login"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btn_logMouseClicked"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_create">
           <Properties>
